--- a/MikuMikuLibrary.Native/MikuMikuLibrary.Native.vcxproj
+++ b/MikuMikuLibrary.Native/MikuMikuLibrary.Native.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="NativeContext.h" />
     <ClInclude Include="FbxExporterCore.h" />
     <ClInclude Include="Pch.h" />
+    <ClInclude Include="StripifierCore.h" />
     <ClInclude Include="Utf8String.h" />
     <ClInclude Include="TextureDecoderCore.h" />
     <ClInclude Include="TextureEncoderCore.h" />
@@ -29,6 +30,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="Dependencies\meshoptimizer\stripifier.cpp" />
     <ClCompile Include="NativeContext.cpp" />
     <ClCompile Include="FbxExporterCore.cpp" />
     <ClCompile Include="Pch.cpp">
@@ -37,6 +39,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StripifierCore.cpp" />
     <ClCompile Include="TextureDecoderCore.cpp" />
     <ClCompile Include="TextureEncoderCore.cpp" />
     <ClCompile Include="TextureHelper.cpp" />
@@ -136,7 +139,7 @@
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\DirectXTex\include;$(ProjectDir)Dependencies\FBX\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\DirectXTex\include;$(ProjectDir)Dependencies\FBX\include;$(ProjectDir)Dependencies\meshoptimizer;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>Pch.h</ForcedIncludeFiles>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>Pch.h</PrecompiledHeaderFile>
@@ -155,7 +158,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\DirectXTex\include;$(ProjectDir)Dependencies\FBX\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\DirectXTex\include;$(ProjectDir)Dependencies\FBX\include;$(ProjectDir)Dependencies\meshoptimizer;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>Pch.h</ForcedIncludeFiles>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>Pch.h</PrecompiledHeaderFile>
@@ -177,7 +180,7 @@
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\DirectXTex\include;$(ProjectDir)Dependencies\FBX\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\DirectXTex\include;$(ProjectDir)Dependencies\FBX\include;$(ProjectDir)Dependencies\meshoptimizer;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>Pch.h</ForcedIncludeFiles>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>Pch.h</PrecompiledHeaderFile>
@@ -196,7 +199,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\DirectXTex\include;$(ProjectDir)Dependencies\FBX\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)Dependencies\DirectXTex\include;$(ProjectDir)Dependencies\FBX\include;$(ProjectDir)Dependencies\meshoptimizer;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>Pch.h</ForcedIncludeFiles>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>Pch.h</PrecompiledHeaderFile>
