Add AET support.
* Yet to be implemented properly in MMM.
* X writing is broken yet again.

Thanks to @samyuu for providing the binary template!

--- a/MikuMikuModel/MikuMikuModel.csproj
+++ b/MikuMikuModel/MikuMikuModel.csproj
@@ -117,9 +117,26 @@
     <Compile Include="Mementos\MementoStack.cs" />
     <Compile Include="Mementos\IMemento.cs" />
     <Compile Include="Mementos\ValueMemento.cs" />
+    <Compile Include="Modules\Aets\AetSetModule.cs" />
+    <Compile Include="Modules\Databases\AetDatabaseModule.cs" />
     <Compile Include="Modules\Imaging\BitmapModule.cs" />
     <Compile Include="Modules\Objects\Extra\Parameters\OsageSkinParameterSetModule.cs" />
+    <Compile Include="Nodes\Aets\AetSetNode.cs" />
+    <Compile Include="Nodes\Aets\AudioNode.cs" />
+    <Compile Include="Nodes\Aets\CameraNode.cs" />
+    <Compile Include="Nodes\Aets\CompositionNode.cs" />
+    <Compile Include="Nodes\Aets\FCurveNode.cs" />
+    <Compile Include="Nodes\Aets\LayerAudioNode.cs" />
+    <Compile Include="Nodes\Aets\LayerNode.cs" />
+    <Compile Include="Nodes\Aets\LayerVideo3DNode.cs" />
+    <Compile Include="Nodes\Aets\LayerVideoNode.cs" />
+    <Compile Include="Nodes\Aets\MarkerNode.cs" />
+    <Compile Include="Nodes\Aets\SceneNode.cs" />
+    <Compile Include="Nodes\Aets\TransferModeNode.cs" />
+    <Compile Include="Nodes\Aets\VideoNode.cs" />
+    <Compile Include="Nodes\Aets\VideoSourceNode.cs" />
     <Compile Include="Nodes\Databases\ObjectDatabaseNode.cs" />
+    <Compile Include="Nodes\Databases\AetDatabaseNode.cs" />
     <Compile Include="Nodes\IO\StreamNode.cs" />
     <Compile Include="Nodes\NodeList.cs" />
     <Compile Include="Nodes\NodeMementos.cs" />
