--- a/MikuMikuLibrary/MikuMikuLibrary.csproj
+++ b/MikuMikuLibrary/MikuMikuLibrary.csproj
@@ -56,6 +56,19 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aets\Audio.cs" />
+    <Compile Include="Aets\Camera.cs" />
+    <Compile Include="Aets\Composition.cs" />
+    <Compile Include="Aets\FCurve.cs" />
+    <Compile Include="Aets\Layer.cs" />
+    <Compile Include="Aets\LayerAudio.cs" />
+    <Compile Include="Aets\TransferMode.cs" />
+    <Compile Include="Aets\LayerVideo.cs" />
+    <Compile Include="Aets\LayerVideo3D.cs" />
+    <Compile Include="Aets\Marker.cs" />
+    <Compile Include="Aets\Scene.cs" />
+    <Compile Include="Aets\AetSet.cs" />
+    <Compile Include="Aets\Video.cs" />
     <Compile Include="Archives\ConflictPolicy.cs" />
     <Compile Include="Archives\FarcArchive.cs" />
     <Compile Include="Archives\IArchive.cs" />
@@ -84,6 +97,7 @@
     <Compile Include="Objects\Extra\Parameters\OsageNodeParameter.cs" />
     <Compile Include="Objects\Extra\Parameters\OsageSkinParameter.cs" />
     <Compile Include="Parameters\ParameterTree.cs" />
+    <Compile Include="IO\Sections\Aets\AetSetSection.cs" />
     <Compile Include="IO\Sections\Databases\AetDatabaseSection.cs" />
     <Compile Include="IO\Sections\Databases\BoneDatabaseSection.cs" />
     <Compile Include="IO\Sections\Databases\ObjectDatabaseSection.cs" />
