--- a/MikuMikuModel/MikuMikuModel.csproj
+++ b/MikuMikuModel/MikuMikuModel.csproj
@@ -122,6 +122,12 @@
     <Compile Include="Modules\IBLs\IBLModule.cs" />
     <Compile Include="Modules\Imaging\BitmapModule.cs" />
     <Compile Include="Modules\Objects\Extra\Parameters\OsageSkinParameterSetModule.cs" />
+    <Compile Include="Modules\PostProcessTables\BloomTableModule.cs" />
+    <Compile Include="Modules\PostProcessTables\DepthOfFieldTableModule.cs" />
+    <Compile Include="Modules\PostProcessTables\FogTableModule.cs" />
+    <Compile Include="Modules\PostProcessTables\LightTableModule.cs" />
+    <Compile Include="Modules\PostProcessTables\ToonEdgeTableModule.cs" />
+    <Compile Include="Modules\PostProcessTables\ColorCorrectTableModule.cs" />
     <Compile Include="Nodes\Aets\AetSetNode.cs" />
     <Compile Include="Nodes\Aets\AudioNode.cs" />
     <Compile Include="Nodes\Aets\CameraNode.cs" />
@@ -148,6 +154,19 @@
     <Compile Include="Nodes\Objects\Extra\Parameters\OsageNodeParameterNode.cs" />
     <Compile Include="Nodes\Objects\Extra\Parameters\OsageSkinParameterNode.cs" />
     <Compile Include="Nodes\Objects\Extra\Parameters\OsageSkinParameterSetNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\Bloom\BloomSettingNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\Bloom\BloomTableNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\ColorCorrect\ColorCorrectSettingNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\ColorCorrect\ColorCorrectTableNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\DepthOfField\DepthOfFieldNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\DepthOfField\DepthOfFieldSettingNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\Fog\FogNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\Fog\FogSettingNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\Light\LightNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\Light\LightSectionNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\Light\LightSettingNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\ToonEdge\ToonEdgeNode.cs" />
+    <Compile Include="Nodes\PostProcessTables\ToonEdge\ToonSettingNode.cs" />
     <Compile Include="Nodes\TypeConverters\IdTypeConverter.cs" />
     <Compile Include="Resources\Styles\Style.cs" />
     <Compile Include="Resources\Styles\StyleColorTable.cs" />
