--- a/MikuMikuLibrary/MikuMikuLibrary.csproj
+++ b/MikuMikuLibrary/MikuMikuLibrary.csproj
@@ -73,6 +73,10 @@
     <Compile Include="Archives\FarcArchive.cs" />
     <Compile Include="Archives\IArchive.cs" />
     <Compile Include="Archives\EntryStream.cs" />
+    <Compile Include="Chritm\ChritmSet.cs" />
+    <Compile Include="Chritm\Cos.cs" />
+    <Compile Include="Chritm\Dbg.cs" />
+    <Compile Include="Chritm\Item.cs" />
     <Compile Include="Cryptography\DivafileDecryptor.cs" />
     <Compile Include="Databases\AetDatabase.cs" />
     <Compile Include="Databases\MotionDatabase.cs" />
@@ -99,6 +103,7 @@
     <Compile Include="IO\Common\BitHelper.cs" />
     <Compile Include="IO\Common\VectorBinaryFormat.cs" />
     <Compile Include="IO\IBinaryFile.cs" />
+    <Compile Include="IO\Sections\Chritm\ChritmSetSection.cs" />
     <Compile Include="IO\Sections\PostProcessTables\BloomTableSection.cs" />
     <Compile Include="IO\Sections\PostProcessTables\ColorCorrectTableSection.cs" />
     <Compile Include="IO\Sections\PostProcessTables\DepthOfFieldTableSection.cs" />
