--- a/MikuMikuModel/MikuMikuModel.csproj
+++ b/MikuMikuModel/MikuMikuModel.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Mementos\IMemento.cs" />
     <Compile Include="Mementos\ValueMemento.cs" />
     <Compile Include="Modules\Aets\AetSetModule.cs" />
+    <Compile Include="Modules\Archives\CriMw\CpkArchiveModule.cs" />
     <Compile Include="Modules\CharacterItem\CharacterItemTableModule.cs" />
     <Compile Include="Modules\Databases\AetDatabaseModule.cs" />
     <Compile Include="Modules\IBLs\IBLModule.cs" />
@@ -144,6 +145,8 @@
     <Compile Include="Nodes\Aets\TransferModeNode.cs" />
     <Compile Include="Nodes\Aets\VideoNode.cs" />
     <Compile Include="Nodes\Aets\VideoSourceNode.cs" />
+    <Compile Include="Nodes\Archives\CriMw\CpkArchiveNode.cs" />
+    <Compile Include="Nodes\Archives\CriMw\CpkDirectoryNode.cs" />
     <Compile Include="Nodes\CharacterItem\CharacterItemTableNode.cs" />
     <Compile Include="Nodes\CharacterItem\CostumeNode.cs" />
     <Compile Include="Nodes\CharacterItem\DebugSetNode.cs" />
