--- a/MikuMikuLibrary/MikuMikuLibrary.csproj
+++ b/MikuMikuLibrary/MikuMikuLibrary.csproj
@@ -69,9 +69,11 @@
     <Compile Include="Aets\Scene.cs" />
     <Compile Include="Aets\AetSet.cs" />
     <Compile Include="Aets\Video.cs" />
+    <Compile Include="Archives\ArchiveUtility.cs" />
     <Compile Include="Archives\ConflictPolicy.cs" />
     <Compile Include="Archives\CriMw\CpkArchive.cs" />
     <Compile Include="Archives\CriMw\UtfTable.cs" />
+    <Compile Include="Archives\Extensions\ArchiveEx.cs" />
     <Compile Include="Archives\FarcArchive.cs" />
     <Compile Include="Archives\IArchive.cs" />
     <Compile Include="Archives\EntryStream.cs" />
