Remove unnecessary DLLs.

--- a/CliTools/FarcPack/FarcPack.csproj
+++ b/CliTools/FarcPack/FarcPack.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>del "$(TargetDir)\AssimpNet.dll"</PostBuildEvent>
+    <PostBuildEvent>del "$(TargetDir)\AssimpNet.dll"
+del "$(TargetDir)\Newtonsoft.Json.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
