--- a/CliTools/DatabaseConverter/DatabaseConverter.csproj
+++ b/CliTools/DatabaseConverter/DatabaseConverter.csproj
@@ -77,6 +77,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>del "$(TargetDir)\AssimpNet.dll"</PostBuildEvent>
+    <PostBuildEvent>del "$(TargetDir)\AssimpNet.dll"
+del "$(TargetDir)\Newtonsoft.Json.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
